# glplayground

./: .gitignore  CMakeLists.txt  imgui.ini
debug/: practice
include/: asset.hpp  asset_manager.hpp  assets.hpp  camera.hpp  dispatcher.hpp  draw.hpp  drawable.hpp  entity.hpp  entity_manager.hpp  game.hpp  gl.hpp  imgui.hpp  keys.hpp  libgl.hpp  libsdl.hpp  material.hpp  mesh.hpp  model.hpp  object.hpp  opengl.hpp  physics.hpp  quad.hpp  rectangle.hpp  renderer.hpp  scene.hpp  sdl.hpp  shader.hpp  texture.hpp  vector2.hpp  vector3.hpp  vertex.hpp  window.hpp  windows.hpp
include/components/: geometry.hpp  render.hpp
include/entities/: background.hpp  player.hpp
include/gl/: gl.hpp  gl_renderer.hpp
include/vk/: vk.hpp  vk_renderer.hpp
shaders/: fragment.glsl  vertex.glsl
source/: asset.cpp  asset_manager.cpp  assets.cpp  camera.cpp  dispatcher.cpp  drawable.cpp  entity.cpp  entity_manager.cpp  game.cpp  imgui.cpp  imgui.ini  libgl.cpp  libsdl.cpp  main.cpp  mesh.cpp  model.cpp  object.cpp  opengl.cpp  quad.cpp  rectangle.cpp  renderer.cpp  scene.cpp  window.cpp  windows.cpp
source/components/: geometry.cpp  render.cpp
source/entities/: background.cpp  player.cpp
source/gl/: glMaterial.cpp  glMesh.cpp  glRenderer.cpp  glShader.cpp  glTexture.cpp  glWindow.cpp  gl_material.cpp  gl_mesh.cpp  gl_renderer.cpp  gl_shader.cpp  gl_texture.cpp  gl_window.cpp  glcontext.cpp  glshader.cpp  gltexture.cpp  glvertexArrays.cpp  glwindow.cpp
source/sdl/: image.cpp  sdl.cpp  sdlimage.cpp  sdllib.cpp
source/vk/: vk_renderer.cpp
